--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@iconify/vue": "^4.1.1",
+    "@vueuse/core": "^10.3.0",
     "ipad-cursor": "^0.5.2",
     "vue": "^3.3.4"
   },
