--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-vue": "^9.16.1",
     "prettier": "^3.0.1",
     "typescript": "^5.0.2",
+    "unplugin-fonts": "^1.0.3",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
   }
